src/core/user-interfaces/tree/tree-component.css
.ui.tree {
    --rct-color-tree-bg: transparent;
}

.ui.tree .tree-item {
    display: flex;
    width: 100%;
    justify-content: space-between;
    padding: 0.25ex 0 0.25ex 1em;
    background-color: rgba(0, 0, 0, 0.015);
    border-width: 1px 0 1px 2px;
    border-style: solid;
    border-color: rgba(0, 0, 0, 0.05);
}

.ui.tree .tree-item:hover {
    background-color: rgba(0, 0, 0, 0.025);
    border-color: rgba(0, 0, 0, 0.15);
}

.ui.tree .tree-item .range {
    color: #666;
    font-family: monospace;
    text-align: right;
}

.ui.tree .tree-item .pre-title {
    padding: 0 1em 0 0;
    color: #666;
    font-family: monospace;
}

.ui.tree .tree-item .post-title {
    padding: 0 0 0 1em;
    color: #666;
}

